--- a/styles.css
+++ b/styles.css
@@ -163,8 +163,8 @@ button[type="submit"]:hover {
   grid-template-rows: min-content;
   gap: 5px;
   overflow-y: scroll;
-  max-height: 250px;
-  margin: 10px;
+  max-height: 280px;
+  margin: 0px 10px 5px 10px;
 }
 #messages p {
   margin: 0;
@@ -192,7 +192,7 @@ button[type="submit"]:hover {
 /* Submitting Questions */
 #question-submit {
   position: absolute;
-  bottom: -4px;
+  bottom: 8px;
   width: 230px;
   left: 5px;
   padding: 5px;
@@ -200,9 +200,9 @@ button[type="submit"]:hover {
 
 #submission-border {
   background-color: #30455C;
-  height: 45px;
-  bottom: -5px;
-  width: 100%;
+  height: 50px;
+  top: -100px;
+  width: 300px;
 }
 
 #question-submit button[type="submit"] {
@@ -220,7 +220,7 @@ button[type="submit"]:hover {
   border-radius: 0px 0px 8px 8px;
   width: 100%;
   margin-left: -1.5px;
-  margin-top: 12px;
+  margin-top: 15px;
 }
 
 #chat-bot-drop-down-content {
@@ -253,7 +253,7 @@ button[type="submit"]:hover {
   float: left;
   color: white;
   text-align: center;
-  height: 25px;
+  height: 30px;
   vertical-align: middle;
 }
 
