--- a/styles.css
+++ b/styles.css
@@ -192,71 +192,36 @@ button[type="submit"]:hover {
 /* Submitting Questions */
 #question-submit {
   position: absolute;
-  bottom: 8px;
-  width: 230px;
-  left: 5px;
-  padding: 5px;
+  bottom: 15px;
+  width: 270px;
+  content: "Send a message";
 }
-
-#submission-border {
-  background-color: #30455C;
-  height: 50px;
-  top: -100px;
-  width: 300px;
-}
-
 #question-submit button[type="submit"] {
-  position: absolute;
-  width: 40px;
-  height: 31.5px;
-  border-radius: 10px;
-  left: 240px;
+  position:absolute ;
+  right: 3%;
+  bottom: 2px;
+  width: 10%;
+  height: 27px;
+  background-color: #f59070;
 }
 /* Drop Down */
-#chat-bot-drop-down {
-  border: solid;
-  border-color: white;
-  height: 50%;
-  border-radius: 0px 0px 8px 8px;
-  width: 100%;
-  margin-left: -1.5px;
-  margin-top: 15px;
-}
-
 #chat-bot-drop-down-content {
-  display: grid;
-  position:fixed;
-  z-index: 1;
-  margin-top: 8px;
-  width: 300px;
-  left: 0;
-  margin-left: 20px;
-}
-
-#chat-bot-drop-down-content::before{
-  content: " ";
+  display: none;
   position: absolute;
-  top: -15px;
-  left: 79%;
-  border: 10px solid transparent;
-  border-bottom-color: #A7B1C2;
+  z-index: 1;
+  margin-top: 10px;
+  width: 100%;
 }
-
 #chat-bot-drop-down-content * {
   all: unset;
-  background-color: #A7B1C2;
+  background-color: #EAF0F3;
   font-size: 14px;
+  margin: 0;
   padding: 5px;
   font-weight: 400;
   width: 100%;
   box-sizing: border-box;
-  float: left;
-  color: white;
-  text-align: center;
-  height: 30px;
-  vertical-align: middle;
 }
-
 #chat-bot-drop-down-content button:hover {
-  color: black;
+  background-color: #c7cccf;
 }
